# ETL_Ejercicio2

./: .gitignore  .~lock.dataset_clean.xlsx#  ETL2_notebook.html  ETL2_notebook.ipynb  Readme.md  pyproject.toml
Dataset/: .~lock.data_clean.csv#  .~lock.output2.csv#  header_firstrow.txt
