[tool.poetry]
name = "etl-ejercicio2"
version = "0.1.0"
description = "Ejercicio 2 de ETL MIACD"
authors = ["Yoniliman Galvis <yoniliman.galves@uao.edu.co>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
jsonlines = "^4.0.0"
pandas = "^2.2.3"
tqdm = "^4.67.1"
tensorflow = "^2.18.0"
jupyter = "^1.1.1"
torch = "^2.6.0"
matplotlib = "^3.10.1"
plotly = "^6.0.0"
presidio-analyzer = "^2.2.357"
presidio-anonymizer = "^2.2.357"
scrubadub = "^2.0.1"
openpyxl = "^3.1.5"
seaborn = "^0.13.2"
ipython = "^9.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
